--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,12 +1,16 @@
+
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
 }
 
 android {
+    apply plugin: 'kotlin-kapt'
     compileSdkVersion 30
     buildToolsVersion "30.0.1"
-
+    dataBinding {
+        enabled = true
+    }
     defaultConfig {
         applicationId "com.damtoto"
         minSdkVersion 16
